fixed spacing issues on store

--- a/css/styles.css
+++ b/css/styles.css
@@ -674,22 +674,32 @@ form > div {
 }
 
 /* STORE */
+#store-header {
+  display: flex;
+  justify-content: center;
+}
+
+#store-title {
+  margin: 2em 0;
+}
+
 #product-store {
   display: grid;
   gap: 1em;
-  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+  margin-bottom: 2em;
 }
 
 #product-store > div {
-  padding: 2em;
+  padding: 1em;
   background-color: #f2f2f2;
-  height: auto;
+  height: 30em;
 }
 
 #product-store > div > img {
   width: 100%;
-  height: 50%;
-  object-fit: cover;
+  height: 60%;
+  object-fit: contain;
 }
 
 @media only screen and (min-width: 768px) {
@@ -732,6 +742,11 @@ form > div {
   .primary-form {
     flex-basis: 100%;
     margin: 1em;
+  }
+
+  /* STORE */
+  #product-store {
+    grid-template-columns: repeat(auto-fit, minmax(14em, 1fr));
   }
 }
 /* end of media query */
