--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -354,20 +354,30 @@ form > div {
 
 /* STORE */
 
+#store-header {
+    display: flex;
+    justify-content: center;
+}
+
+#store-title {
+    margin: 2em 0;
+}
+
 #product-store {
     display: grid;
     gap: 1em;
-    grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
+    margin-bottom: 2em;
 }
 
 #product-store > div {
-    padding: 2em;
+    padding: 1em;
     background-color: $primaryGray;
-    height: auto;
+    height: 30em
 }
 
 #product-store > div > img {
     width: 100%;
-    height: 50%;
-    object-fit: cover;
+    height: 60%;
+    object-fit: contain;
 }
